--- a/helm/ingress/templates/front-ingress.yaml
+++ b/helm/ingress/templates/front-ingress.yaml
@@ -3,9 +3,10 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+
   name: redirect-front-ingress
   namespace: {{ .Release.Namespace }}
 spec:
