--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -8,7 +8,7 @@ on:
       environment:
         description: "Deployment environment (e.g., prod)"
         required: true
-        default: "prod"
+        default: "dev" # ← change "prod" to "dev" if you want to deploy to dev by default
 
 jobs:
   deploy:
