--- a/helm/backend/values.yaml
+++ b/helm/backend/values.yaml
@@ -3,3 +3,9 @@ image:
   repository: ghcr.io/skybricks-devops/backend
   tag: latest
 
+# Configuration de la base de données PostgreSQL
+postgresql:
+  host: psql-devops-cicd-dev.postgres.database.azure.com
+  port: 5432
+  database: employeesdb
+
