--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -72,10 +72,7 @@ jobs:
       - name: Deploy Backend
         run: |
           helm upgrade --install backend ./helm/backend \
-            --namespace ${{ env.NAMESPACE }} \
-            --set postgresql.host=${{ secrets.DB_HOST }} \
-            --set postgresql.port=${{ secrets.DB_PORT }} \
-            --set postgresql.database=${{ secrets.DB_NAME }}
+            --namespace ${{ env.NAMESPACE }}
 
       - name: Deploy Frontend
         run: |
