--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -72,7 +72,12 @@ jobs:
       - name: Deploy Backend
         run: |
           helm upgrade --install backend ./helm/backend \
-            --namespace ${{ env.NAMESPACE }}
+            --namespace ${{ env.NAMESPACE }} \
+            --set postgresql.host=${{ secrets.DB_HOST }} \
+            --set postgresql.port=${{ secrets.DB_PORT }} \
+            --set postgresql.database=${{ secrets.DB_NAME }} \
+            --set postgresql.user=${{ secrets.DB_USER }} \
+            --set postgresql.password=${{ secrets.DB_PASSWORD }}
 
       - name: Deploy Frontend
         run: |
