--- a/helm/backend/templates/deployment.yaml
+++ b/helm/backend/templates/deployment.yaml
@@ -29,14 +29,12 @@ spec:
             - name: DB_NAME
               value: {{ .Values.postgresql.database }}
             - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: backend-secrets
-                  key: DB_USER
+              value: {{ .Values.postgresql.user }}
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: backend-secrets
                   key: DB_PASSWORD
+    
 
 
