--- a/helm/backend/values.yaml
+++ b/helm/backend/values.yaml
@@ -3,4 +3,11 @@ image:
   repository: ghcr.io/skybricks-devops/backend
   tag: latest
 
+postgresql:
+  host: ""
+  port: ""
+  database: ""
+  user: ""
+  password: ""
+
 
