--- a/helm/ingress/templates/front-ingress.yaml
+++ b/helm/ingress/templates/front-ingress.yaml
@@ -13,7 +13,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api(/|$)(.*)
+          - path: /employees
             pathType: ImplementationSpecific
             backend:
               service:
