--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -29,22 +29,22 @@ jobs:
         uses: actions/checkout@v4
 
       # Télécharge les outputs Terraform du workflow précédent
-      - name: Download Terraform Outputs
-        uses: actions/download-artifact@v4
-        with:
-          name: tf-outputs
-          path: ./tf-artifacts
+      #- name: Download Terraform Outputs
+       # uses: actions/download-artifact@v4
+        #with:
+         # name: tf-outputs
+          #path: ./tf-artifacts
 
-      - name: Check tf_outputs.json presence
-        run: |
-          if [ ! -f ./tf_outputs.json ]; then
-            echo "❌ tf_outputs.json not found. Add it to the repo before running this workflow."
-            exit 1
-          fi
+      #- name: Check tf_outputs.json presence
+       # run: |
+        #  if [ ! -f ./tf_outputs.json ]; then
+           # echo "❌ tf_outputs.json not found. Add it to the repo before running this workflow."
+         #   exit 1
+          #fi
 
-      - name: Export Terraform Outputs as ENV
-        run: |
-          jq -r 'to_entries|map("export " + .key + "=" + (.value.value|tostring))|.[]' ./tf_outputs.json >> $GITHUB_ENV
+      #- name: Export Terraform Outputs as ENV
+       # run: |
+        #  jq -r 'to_entries|map("export " + .key + "=" + (.value.value|tostring))|.[]' ./tf_outputs.json >> $GITHUB_ENV
 
       - name: Azure CLI login
         uses: azure/login@v1
@@ -71,11 +71,11 @@ jobs:
           
           # Create backend secrets for database access
           kubectl create secret generic backend-secrets \
-            --from-literal=DB_HOST="${{ env.postgresql_server_fqdn }}" \
-            --from-literal=DB_PORT='5432' \
-            --from-literal=DB_NAME="${{ env.postgresql_database_name }}" \
-            --from-literal=DB_USER="${{ env.postgresql_admin_username }}" \
-            --from-literal=DB_PASSWORD="${{ env.postgresql_admin_password }}" \
+            --from-literal=DB_HOST="${{ secrets.DB_HOST }}" \
+            --from-literal=DB_PORT="${{ secrets.DB_PORT }}" \
+            --from-literal=DB_NAME="${{ secrets.DB_NAME }}" \
+            --from-literal=DB_USER="${{ secrets.DB_USER }}" \
+            --from-literal=DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
             --from-literal=DB_SSLMODE='require' \
             --namespace $NAMESPACE \
             --dry-run=client -o yaml | kubectl apply -f -
