--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -101,7 +101,7 @@ jobs:
             --set postgresql.database='${{ secrets.DB_NAME }}' \
             --set postgresql.user='${{ secrets.DB_USER }}' \
             --set-string postgresql.password='${{ secrets.DB_PASSWORD }}' \
-            --set postgresql.sslmode=require
+            --set-string postgresql.sslmode=require
 
       - name: Deploy Frontend
         run: |
